background updated and button CSS updated

--- a/f-e/index.html
+++ b/f-e/index.html
@@ -10,14 +10,26 @@
     <link rel="stylesheet" href="../style/style-public.css">
     <script src="../js/theme.js"></script>
 
+    
+
 
 </head>
 
 <body>
+
+
+
     <div class="bg-img"></div>
 
     <div class="container">
         <div class="fixed">
+            <div>
+                <div class="wave"></div>
+                <div class="wave"></div>
+                <div class="wave"></div>
+             </div>
+
+
             <div class="header">
 
                 <div class="logo-section">
